@@ -1,8 +1,8 @@
-# $Id: Makefile.am,v 1.5 2012-12-14 19:36:53 karl Exp $
+# $Id: Makefile.am,v 1.6 2013-01-27 17:34:30 karl Exp $
 # Makefile.am for texinfo/man.
 #
-# Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012
-# Free Software Foundation, Inc.
+# Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,
+# 2012, 2013 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -23,6 +23,9 @@ endif
 
 # These are hand-written.
 man_MANS += info.5 texinfo.5
+
+# This is generated by pod2man, but let's just run it by hand.
+man_MANS += pod2texi.1
 
 # These are just .so's to the common program.
 man_MANS += texi2any.1 texi2pdf.1 pdftexi2dvi.1
@@ -78,9 +81,6 @@ install-info.1: $(top_srcdir)/install-info/install-info.c \
                           $(common_mandeps)
 	@name="update info/dir entries" && $(man_rule_bin)
 
-texindex.1: $(top_srcdir)/util/texindex.c $(common_mandeps)
-	@name="sort Texinfo index files" && $(man_rule_bin)
-
 # Here we need some postprocessing to avoid man misformatting.
 makeinfo.1: $(tpdir)/texi2any.pl $(common_mandeps)
 	@name="translate Texinfo documents" && $(man_rule_bin)
@@ -88,7 +88,10 @@ makeinfo.1: $(tpdir)/texi2any.pl $(common_mandeps)
 	sed '/^\.IP$$/N;/\nAlso/s/I//;/\nThe/s/I//' $@.tmp >$@
 	rm $@.tmp
 
-
+texindex.1: $(top_srcdir)/util/texindex.c $(common_mandeps)
+	@name="sort Texinfo index files" && $(man_rule_bin)
+
+# 
 # For texi2dvi, do not depend on the current user's settings.
 texi2dvi_envvars = unset TEXI2DVI_BUILD_MODE; unset TEXI2DVI_BUILD_DIRECTORY
 
