@@ -1,0 +1,210 @@
+.\" Automatically generated by Pod::Man 2.25 (Pod::Simple 3.20)
+.\"
+.\" Standard preamble:
+.\" ========================================================================
+.de Sp \" Vertical space (when we can't use .PP)
+.if t .sp .5v
+.if n .sp
+..
+.de Vb \" Begin verbatim text
+.ft CW
+.nf
+.ne \\$1
+..
+.de Ve \" End verbatim text
+.ft R
+.fi
+..
+.\" Set up some character translations and predefined strings.  \*(-- will
+.\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
+.\" double quote, and \*(R" will give a right double quote.  \*(C+ will
+.\" give a nicer C++.  Capital omega is used to do unbreakable dashes and
+.\" therefore won't be available.  \*(C` and \*(C' expand to `' in nroff,
+.\" nothing in troff, for use with C<>.
+.tr \(*W-
+.ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
+.ie n \{\
+.    ds -- \(*W-
+.    ds PI pi
+.    if (\n(.H=4u)&(1m=24u) .ds -- \(*W\h'-12u'\(*W\h'-12u'-\" diablo 10 pitch
+.    if (\n(.H=4u)&(1m=20u) .ds -- \(*W\h'-12u'\(*W\h'-8u'-\"  diablo 12 pitch
+.    ds L" ""
+.    ds R" ""
+.    ds C` ""
+.    ds C' ""
+'br\}
+.el\{\
+.    ds -- \|\(em\|
+.    ds PI \(*p
+.    ds L" ``
+.    ds R" ''
+'br\}
+.\"
+.\" Escape single quotes in literal strings from groff's Unicode transform.
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
+.\"
+.\" If the F register is turned on, we'll generate index entries on stderr for
+.\" titles (.TH), headers (.SH), subsections (.SS), items (.Ip), and index
+.\" entries marked with X<> in POD.  Of course, you'll have to process the
+.\" output yourself in some meaningful fashion.
+.ie \nF \{\
+.    de IX
+.    tm Index:\\$1\t\\n%\t"\\$2"
+..
+.    nr % 0
+.    rr F
+.\}
+.el \{\
+.    de IX
+..
+.\}
+.\"
+.\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
+.\" Fear.  Run.  Save yourself.  No user-serviceable parts.
+.    \" fudge factors for nroff and troff
+.if n \{\
+.    ds #H 0
+.    ds #V .8m
+.    ds #F .3m
+.    ds #[ \f1
+.    ds #] \fP
+.\}
+.if t \{\
+.    ds #H ((1u-(\\\\n(.fu%2u))*.13m)
+.    ds #V .6m
+.    ds #F 0
+.    ds #[ \&
+.    ds #] \&
+.\}
+.    \" simple accents for nroff and troff
+.if n \{\
+.    ds ' \&
+.    ds ` \&
+.    ds ^ \&
+.    ds , \&
+.    ds ~ ~
+.    ds /
+.\}
+.if t \{\
+.    ds ' \\k:\h'-(\\n(.wu*8/10-\*(#H)'\'\h"|\\n:u"
+.    ds ` \\k:\h'-(\\n(.wu*8/10-\*(#H)'\`\h'|\\n:u'
+.    ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'^\h'|\\n:u'
+.    ds , \\k:\h'-(\\n(.wu*8/10)',\h'|\\n:u'
+.    ds ~ \\k:\h'-(\\n(.wu-\*(#H-.1m)'~\h'|\\n:u'
+.    ds / \\k:\h'-(\\n(.wu*8/10-\*(#H)'\z\(sl\h'|\\n:u'
+.\}
+.    \" troff and (daisy-wheel) nroff accents
+.ds : \\k:\h'-(\\n(.wu*8/10-\*(#H+.1m+\*(#F)'\v'-\*(#V'\z.\h'.2m+\*(#F'.\h'|\\n:u'\v'\*(#V'
+.ds 8 \h'\*(#H'\(*b\h'-\*(#H'
+.ds o \\k:\h'-(\\n(.wu+\w'\(de'u-\*(#H)/2u'\v'-.3n'\*(#[\z\(de\v'.3n'\h'|\\n:u'\*(#]
+.ds d- \h'\*(#H'\(pd\h'-\w'~'u'\v'-.25m'\f2\(hy\fP\v'.25m'\h'-\*(#H'
+.ds D- D\\k:\h'-\w'D'u'\v'-.11m'\z\(hy\v'.11m'\h'|\\n:u'
+.ds th \*(#[\v'.3m'\s+1I\s-1\v'-.3m'\h'-(\w'I'u*2/3)'\s-1o\s+1\*(#]
+.ds Th \*(#[\s+2I\s-2\h'-\w'I'u*3/5'\v'-.3m'o\v'.3m'\*(#]
+.ds ae a\h'-(\w'a'u*4/10)'e
+.ds Ae A\h'-(\w'A'u*4/10)'E
+.    \" corrections for vroff
+.if v .ds ~ \\k:\h'-(\\n(.wu*9/10-\*(#H)'\s-2\u~\d\s+2\h'|\\n:u'
+.if v .ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'\v'-.4m'^\v'.4m'\h'|\\n:u'
+.    \" for low resolution devices (crt and lpr)
+.if \n(.H>23 .if \n(.V>19 \
+\{\
+.    ds : e
+.    ds 8 ss
+.    ds o a
+.    ds d- d\h'-1'\(ga
+.    ds D- D\h'-1'\(hy
+.    ds th \o'bp'
+.    ds Th \o'LP'
+.    ds ae ae
+.    ds Ae AE
+.\}
+.rm #[ #] #H #V #F C
+.\" ========================================================================
+.\"
+.IX Title "POD2TEXI 1"
+.TH POD2TEXI 1 "2013-01-27" "perl v5.16.2" "User Contributed Perl Documentation"
+.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
+.\" way too many mistakes in technical documents.
+.if n .ad l
+.nh
+.SH "NAME"
+pod2texi \- convert Pod to Texinfo
+.SH "SYNOPSIS"
+.IX Header "SYNOPSIS"
+.Vb 1
+\&  pod2texi [OPTION]... POD\-FILE...
+.Ve
+.SH "DESCRIPTION"
+.IX Header "DESCRIPTION"
+Translate Pod to Texinfo.  If the \f(CW\*(C`\-\-base\-level\*(C'\fR is higher than 0, a
+main manual including all the files is done otherwise all manuals are
+standalone (the default).
+.SH "OPTIONS"
+.IX Header "OPTIONS"
+.IP "\fB\-\-base\-level\fR=\fINUM|NAME\fR" 4
+.IX Item "--base-level=NUM|NAME"
+Sets the level of the head1 commands.  It may be an integer or a Texinfo
+sectioning command.  If it is a Texinfo sectioning command the corresponding
+level is used.  If the resulting level is 1, this corresponds to 
+\&\f(CW@chapter\fR/@unnumbered level.  If set to 0, the head1 commands level is 
+still 1, but the output manual is considered to be a standalone manual.
+.Sp
+If the level is not 0, the pod file is rendered as a fragment of a 
+Texinfo manual.  In that case, each pod file has an additional sectioning
+command one level above the head1 commands level added for the whole
+file.  Therefore if you want to have each pod file as a chapter, you should
+use \f(CW\*(C`section\*(C'\fR as the base level.
+.IP "\fB\-\-debug\fR=\fI\s-1NUM\s0\fR" 4
+.IX Item "--debug=NUM"
+Set debugging level to \fI\s-1NUM\s0\fR.
+.IP "\fB\-\-help\fR" 4
+.IX Item "--help"
+Display help and exit.
+.IP "\fB\-\-output\fR=\fI\s-1NAME\s0\fR" 4
+.IX Item "--output=NAME"
+Name for the first manual, or the main manual if there is a main manual.
+Default is output on standard out.
+.IP "\fB\-\-no\-section\-nodes\fR" 4
+.IX Item "--no-section-nodes"
+Use anchors for sections instead of nodes.
+.IP "\fB\-\-no\-fill\-section\-gaps\fR" 4
+.IX Item "--no-fill-section-gaps"
+Do not fill sectioning gaps with empty \f(CW@unnumbered\fR.
+.IP "\fB\-\-preamble\fR=\fI\s-1STR\s0\fR" 4
+.IX Item "--preamble=STR"
+Insert \fI\s-1STR\s0\fR as top boilerplate before includes.  The default is fairly
+minimal, and sets \f(CW@documentencoding\fR to \f(CW\*(C`utf\-8\*(C'\fR.  For example, you can
+set this to the empty string and then write your own top-level
+boilerplate which uses \f(CW@include\fR to incorporate the generated one.
+.IP "\fB\-\-subdir\fR=\fI\s-1NAME\s0\fR" 4
+.IX Item "--subdir=NAME"
+If there is a main manual with include files, each corresponding to
+an input pod file, then include files are put in the directory \fI\s-1NAME\s0\fR.
+.IP "\fB\-\-unnumbered\-sections\fR" 4
+.IX Item "--unnumbered-sections"
+Use unnumbered sectioning commands (@unnumbered...) instead of the default
+numbered sectioning Texinfo @\-commands (@chapter, \f(CW@section\fR...).
+.IP "\fB\-\-top\fR=\fI\s-1TOP\s0\fR" 4
+.IX Item "--top=TOP"
+Name of the \f(CW@top\fR element for the main manual.  May contain Texinfo code.
+.IP "\fB\-\-version\fR" 4
+.IX Item "--version"
+Display version information and exit.
+.SH "SEE ALSO"
+.IX Header "SEE ALSO"
+Pod::Simple::Texinfo.  The Texinfo manual.  perlpod.
+.SH "COPYRIGHT"
+.IX Header "COPYRIGHT"
+Copyright (C) 2012 Free Software Foundation, Inc.
+.PP
+This program is free software; you can redistribute it and/or modify
+it under the terms of the \s-1GNU\s0 General Public License as published by
+the Free Software Foundation; either version 3 of the License,
+or (at your option) any later version.
+.PP
+There is \s-1NO\s0 \s-1WARRANTY\s0, to the extent permitted by law.
+.SH "AUTHOR"
+.IX Header "AUTHOR"
+Patrice Dumas <pertusus@free.fr>.
